Se corrigen credenciales de postgres

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Dev
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=1234
-POSTGRES_DB=service_orders
-POSTGRES_PORT=5432
-POSTGRES_HOST=localhost
+# POSTGRES_USER=postgres
+# POSTGRES_PASSWORD=1234
+# POSTGRES_DB=service_orders
+# POSTGRES_PORT=5432
+# POSTGRES_HOST=localhost
 
 # Production
 POSTGRES_USER=eaorpvwjvfypky
